@@ -1,3 +1,7 @@
+2015-11-08  Benno Schulenberg  <bensberg@justemail.net>
+	* src/global.c (shortcut_init): Allow exiting from the file browser
+	with the same key (^T) as it was entered (as ^G for the help viewer).
+
 2015-11-07  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (do_replace_loop): Correct the logic for adjusting the
 	x position of the mark -- it happened to work because 'mark_begin' is
